# deepin-terminal-ng

./: .gitignore  CMakeLists.txt  README.md  default-config.json  define.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  settings_translation.cpp  termproperties.cpp  termproperties.h  termwidget.cpp  termwidget.h  termwidgetpage.cpp  termwidgetpage.h  themeitemdelegate.cpp
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  shortcutmanager.cpp  shortcutmanager.h  tabbar.cpp  termwidget.cpp  termwidget.h  termwidgetpage.cpp  termwidgetpage.h  themepanel.cpp
translations/: dterm.ts  dterm_zh_CN.ts
